# adventofcode21

./: pyproject.toml
01/: day1.ipynb
02/: day2.ipynb
03/: day3.ipynb
04/: day4.ipynb
05/: Untitled.ipynb
06/: 06.ipynb  input.txt
08/: 08.ipynb
10/: 10.ipynb
2021/01/: day1.ipynb
2021/02/: day2.ipynb  input_header.csv
2021/03/: day3.ipynb
2021/04/: day4.ipynb
2021/05/: 05.ipynb
2021/06/: 06.ipynb
2021/07/: 07.ipynb
2021/08/: 08.ipynb
2021/09/: 09.ipynb
2021/10/: 10.ipynb
